[package]
name = "rust-vss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.2.6", features = ["rand"] }
num-integer = "0.1.45"
num-primes = "0.3.0"
num-traits = "0.2.17"
rand = "0.5.6"
rayon = "1.8.1"
sha2 = "0.9.2"
